Decrease runtime of ForwardToLeaderIntegrationTest (#6256)
Time to run is substantially reduced from 332 seconds to 16 seconds.